--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "framer-motion": "^11.0.0",
-    "lucide-react": "^0.400.0"
+    "lucide-react": "^0.400.0",
+    "@alien_org/sso-sdk-core": "latest",
+    "@alien_org/react": "latest",
+    "@alien_org/bridge": "latest",
+    "@alien_org/auth-client": "latest"
   },
   "devDependencies": {
     "@types/node": "^20",
